feat: add Community Post MVP authoring
